--- a/Form validation.html
+++ b/Form validation.html
@@ -20,7 +20,7 @@
             password<span style="color: red;">*</span>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <input type='password' name="mypassword" ng-model="password" required
-                pattern="(?=.\d)(?=.[a-z])(?=.*[A-Z]).{8,}">
+                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
             <span style="color: red;" ng-show="myform.mypassword.$error.required">Password is required</span>
             <span style="color: red;" ng-show="myform.mypassword.$error.pattern">Password is invalid</span>
             <br>
